--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,3 +23,17 @@ jobs:
 
       - name: Build the app
         run: npm run build 
+      
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
+      
+      - name: Push to gcloud regsitery artifact 
+        run: gcloud builds submit --tag europe-west1-docker.pkg.dev/notely-468012/notely-ar-repo/629b416892cd:latest .
