--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,3 +37,6 @@ jobs:
       
       - name: Push to gcloud regsitery artifact 
         run: gcloud builds submit --tag europe-west1-docker.pkg.dev/notely-468012/notely-ar-repo/629b416892cd:latest .
+    
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image europe-west1-docker.pkg.dev/notely-468012/notely-ar-repo/629b416892cd:latest --region europe-west1 --allow-unauthenticated --project notely-468012 --max-instances=4
