--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,9 @@ jobs:
   deploy:
     name: Deploy  
     runs-on: ubuntu-latest
+
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
   
     steps:
       - name: Check out code
@@ -38,5 +41,10 @@ jobs:
       - name: Push to gcloud regsitery artifact 
         run: gcloud builds submit --tag europe-west1-docker.pkg.dev/notely-468012/notely-ar-repo/629b416892cd:latest .
     
+      - name: Migrate DB
+        run: npm run db:migrate
+
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image europe-west1-docker.pkg.dev/notely-468012/notely-ar-repo/629b416892cd:latest --region europe-west1 --allow-unauthenticated --project notely-468012 --max-instances=4
+      
+      
